--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
           npm install -g newman-reporter-htmlextra
 
       - name: Run Tests
-        run: newman run ServeRest.postman_collection.json -e serveRest_env.postman_environment.json -r cli,htmlextra
+        run: newman run ServeRest.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra
 
       - name: Upload Report
         uses: actions/upload-artifact@v3.1.2
