--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: # <-- Adicionado para habilitar o botão "Run workflow"
 
 jobs:
   newman:
@@ -22,6 +23,7 @@ jobs:
         run: |
           npm install -g newman
           npm install -g newman-reporter-htmlextra
+
       - name: Run Tests
         run: newman run ServeRest.postman_collection.json -e ServeRest.postman_environment.json -r cli,htmlextra
 
