--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,8 @@ jobs:
   newman:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Create directory for test artifacts
         run: mkdir testArtifacts
@@ -28,7 +29,7 @@ jobs:
         run: newman run ServeRest.postman_collection.json -e ServeRest.postman_environment.json -r cli,htmlextra
 
       - name: Upload Report
-        uses: actions/upload-artifact@v3 # Corrigido para usar @v3
+        uses: actions/upload-artifact@v3
         with:
           name: Reports
           path: newman
