--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Reports
-          path: Newman
+          path: newman
