--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,25 +1,33 @@
 name: Newman Run
+
 on:
-push:
-branches:
-- main
+  push:
+    branches:
+    - main
+
 jobs:
-newman:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v3
+  newman:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
 - name: Create dir
-run: |
-mkdir testArtifacts
+  run: |
+    mkdir testArtifacts
+
 #Config environement
-- name: Install Node
-uses: actions/setup-node@v3.4.1
+  - name: Install Node
+  uses: actions/setup-node@v3.4.1
+
 - name: Install Newman
-run: |
-npm install -g newman
-npm install -g newman-reporter-htmlextra
+  run: |
+    npm install -g newman
+    npm install -g newman-reporter-htmlextra
+
 - name: Run Test
-run: newman run ServeRest_API.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra
+  run: |
+  newman run ServeRest_API.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra
+
 - name: Report
 uses: actions/upload-artifact@v3.1.2
 with:
