--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,12 +12,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create dir
-        run: |
-          mkdir testArtifacts
+        run: mkdir testArtifacts
 
-      # Config environment
       - name: Install Node
-        uses: actions/setup-node@v3.6.0
+        uses: actions/setup-node@v3
 
       - name: Install Newman
         run: |
@@ -26,10 +24,13 @@ jobs:
 
       - name: Run Test
         run: |
-          newman run ServeRest_API.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra --reporter-htmlextra-export testArtifacts/report.html
+          newman run ServeRest_API.postman_collection.json \
+            -e ServeRest_env.postman_environment.json \
+            -r cli,htmlextra \
+            --reporter-htmlextra-export testArtifacts/report.html
 
-      - name: Report
-        uses: actions/upload-artifact@v3.1.2
+      - name: Upload Report
+        uses: actions/upload-artifact@v3
         with:
           name: Reports
           path: testArtifacts
