--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Newman Run
+name: Newman Test & Deploy
 
 on:
   push:
@@ -11,35 +11,36 @@ permissions:
   id-token: write
 
 jobs:
-  newman:
+  test:
     runs-on: ubuntu-22.04
+
     steps:
       - name: Checkout código
         uses: actions/checkout@v3
 
-      - name: Criar pasta de relatórios
+      - name: Criar pasta para relatórios
         run: mkdir -p testArtifacts
 
-      - name: Instalar Node
-        uses: actions/setup-node@v3
+      - name: Instalar Node.js
+        uses: actions/setup-node@v3.9.1
 
-      - name: Instalar Newman
+      - name: Instalar Newman e reporter
         run: |
           npm install -g newman
           npm install -g newman-reporter-htmlextra
 
-      - name: Restaurar arquivo de ambiente
+      - name: Restaurar arquivo de ambiente Postman do secret
         run: |
           echo "${{ secrets.SERVEREST_ENV_B64 }}" | base64 -d > ServeRest_env.postman_environment.json
 
-      - name: Executar testes Newman
+      - name: Executar testes com Newman
         run: |
           newman run ServeRest.postman_collection.json \
             -e ServeRest_env.postman_environment.json \
             -r cli,htmlextra \
             --reporter-htmlextra-export testArtifacts/report.html
 
-      - name: Mover relatório para pasta pública
+      - name: Preparar relatório para deploy
         run: |
           mkdir -p public
           mv testArtifacts/report.html public/index.html
@@ -50,8 +51,9 @@ jobs:
           path: public
 
   deploy:
-    needs: newman
+    needs: test
     runs-on: ubuntu-22.04
+
     steps:
       - name: Deploy no GitHub Pages
         uses: actions/deploy-pages@v2
