--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,59 +1,27 @@
-name: Newman Test & Deploy
-
+name: Newman Run
 on:
-  push:
-    branches:
-      - main
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
+push:
+branches:
+- main
 jobs:
-  test:
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout código
-        uses: actions/checkout@v3
-
-      - name: Criar pasta para relatórios
-        run: mkdir -p testArtifacts
-
-      - name: Instalar Node.js
-        uses: actions/setup-node@v3.9.1
-
-      - name: Instalar Newman e reporter
-        run: |
-          npm install -g newman
-          npm install -g newman-reporter-htmlextra
-
-      - name: Restaurar arquivo de ambiente Postman do secret
-        run: |
-          echo "${{ secrets.SERVEREST_ENV_B64 }}" | base64 -d > ServeRest_env.postman_environment.json
-
-      - name: Executar testes com Newman
-        run: |
-          newman run ServeRest.postman_collection.json \
-            -e ServeRest_env.postman_environment.json \
-            -r cli,htmlextra \
-            --reporter-htmlextra-export testArtifacts/report.html
-
-      - name: Preparar relatório para deploy
-        run: |
-          mkdir -p public
-          mv testArtifacts/report.html public/index.html
-
-      - name: Upload artifact para GitHub Pages
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: public
-
-  deploy:
-    needs: test
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Deploy no GitHub Pages
-        uses: actions/deploy-pages@v2
+newman:
+runs-on: ubuntu-latest
+steps:
+- uses: actions/checkout@v3
+- name: Create dir
+run: |
+mkdir testArtifacts
+#Config environement
+- name: Install Node
+uses: actions/setup-node@v3.4.1
+- name: Install Newman
+run: |
+npm install -g newman
+npm install -g newman-reporter-htmlextra
+- name: Run Test
+run: newman run ServeRest.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra
+- name: Report
+uses: actions/upload-artifact@v3.1.2
+with:
+name: Reports
+path: newman
