--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,27 +1,34 @@
 name: Newman Run
+
 on:
-push:
-branches:
-- main
+  push:
+    branches:
+      - main
+
 jobs:
-newman:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v3
-- name: Create dir
-run: |
-mkdir testArtifacts
-#Config environement
-- name: Install Node
-uses: actions/setup-node@v3
-- name: Install Newman
-run: |
-npm install -g newman
-npm install -g newman-reporter-htmlextra
-- name: Run Test
-run: newman run ServeRest.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra
-- name: Report
-uses: actions/upload-artifact@v3.1.2
-with:
-name: Reports
-path: newman
+  newman:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Create dir
+        run: |
+          mkdir testArtifacts
+
+      # Config environment
+      - name: Install Node
+        uses: actions/setup-node@v3
+
+      - name: Install Newman
+        run: |
+          npm install -g newman
+          npm install -g newman-reporter-htmlextra
+
+      - name: Run Test
+        run: newman run ServeRest.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra --reporter-htmlextra-export testArtifacts/report.html
+
+      - name: Report
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: Reports
+          path: testArtifacts
