--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,26 +8,32 @@ on:
 jobs:
   newman:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Create dir
-        run: |
-          mkdir testArtifacts
+      - name: Create directory for reports
+        run: mkdir -p testArtifacts
 
-      # Config environment
-      - name: Install Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: '18' # ou outra versão, se necessário
 
-      - name: Install Newman
+      - name: Install Newman and reporter
         run: |
           npm install -g newman
           npm install -g newman-reporter-htmlextra
 
-      - name: Run Test
-        run: newman run ServeRest.postman_collection.json -e ServeRest_env.postman_environment.json -r cli,htmlextra --reporter-htmlextra-export testArtifacts/report.html
+      - name: Run Newman tests
+        run: |
+          newman run ServeRest.postman_collection.json \
+            -e ServeRest_env.postman_environment.json \
+            -r cli,htmlextra \
+            --reporter-htmlextra-export testArtifacts/report.html
 
-      - name: Report
+      - name: Upload Newman report
         uses: actions/upload-artifact@v3
         with:
           name: Reports
