--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,45 +1,40 @@
-name: Run ServeRest API Tests
-
+name: Pipeline Testes Automatizados API ServeRest Postman Newman
+# executa o workflow toda vez que for realizado um push ou pull-request no repositório
 on:
-  workflow_dispatch: # Permite execução manual no GitHub
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+  # permite também executar esse workflow manualmente na aba "Actions" do GitHub
+  workflow_dispatch:
 
 jobs:
-  run-api-tests:
-    runs-on: ubuntu-latest # Sobe uma máquina Ubuntu na versão mais recente
+  postman-newman-api-serve-rest:
+    # agente de execução/runner 
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3 # Faz o checkout do código do repositório
+      - name: Passo 1 - Obter cópia do código-fonte do repositório
+        uses: actions/checkout@v3
 
-      - name: Create test directory
+      - name: Passo 2 - Verificar versões do Node e Newman
         run: |
-          mkdir -p ~/serrest-tests # Cria diretório para os testes
-          cp ServeRest_API.postman_collection.json ~/serrest-tests/
-          cp ServeRest.postman_environment.json ~/serrest-tests/
-          cd ~/serrest-tests
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20' # Instala Node.js versão 20 (ou a versão mais recente estável)
-
-      - name: Install Newman and HTML Extra Reporter
-        run: |
-          npm install -g newman # Instala Newman globalmente
-          npm install -g newman-reporter-htmlextra # Instala o reporter HTML Extra
-
-      - name: Run API tests with Newman
-        run: |
-          cd ~/serrest-tests
-          newman run ServeRest_API.postman_collection.json \
-            -e ServeRest.postman_environment.json \
-            -r cli,htmlextra \
-            --reporter-htmlextra-export test-report.html # Roda os testes com relatório em HTML
-
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v3
-        with:
-          name: serve-rest-html-report
-          path: ~/serrest-tests/test-report.html # Anexa o relatório como artefato no GitHub
-
-      # A sessão termina automaticamente após o fim do workflow
+          node --version
+          newman --version
+          
+      - name: Passo 3 - Instalar newman-reporter-htmlextra
+        run: sudo npm install -g newman-reporter-htmlextra
+        
+      - name: Passo 4 - Executar com Newman testes automatizados de API REST em um ambiente de produção do "ServeRest" da collection e environment do Postman e Gerar report html 
+        run: newman run ServeRest.postman_collection.json -e ServeRest.postman_environment.json --delay-request 2 --reporters cli, -r htmlextra --reporter-htmlextra-export ./reports/postman-api-serve-rest-report-htmlextra-newman.html
+   
+      - name: Passo 5 - Armazenar report html
+        # expressão condicional para que sempre seja executado independentemente dos resultados dos steps anteriores
+        if: ${{ always() }}      
+        uses: actions/upload-artifact@v4
+        with: 
+            name: postman-api-serve-rest-report-html-newman
+            path: ./reports
+            # armazena o report html por 30 dias
+            retention-days: 30
