--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,24 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout do código
+      - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: 🟢 Setup do Node.js
+      - name: Setup do Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: 📦 Instalação de dependências
+      - name: Instalação de dependências
         run: npm ci
 
-      - name: 🔍 Verificação de lint
+      - name: Verificação de lint
         run: npm run lint
 
-      - name: 🧪 Execução dos testes
+      - name: Execução dos testes
         run: npm test
 
-      - name: ✅ Validação de build (opcional)
+      - name: Validação de build (opcional)
         run: |
           if [ -f package.json ] && grep -q '"build":' package.json; then
             npm run build
