--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,35 @@
-name: API Tests
-
-on: [push, pull_request]
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v3
-      
-      - name: Instalar Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      
-      - name: Instalar Newman
-        run: npm install -g newman
-      
-      - name: Executar testes da API com o ambiente Postman
-        run: newman run ServeRest.postman_collection.json -e ServeRest.postman_environment.json --env-var "TOKEN=${{ secrets.API_TOKEN }}"
+name: APIRest Run
+ 
+ on:
+   push:
+     branches:
+       - main
+ 
+ jobs:
+   newman:
+     runs-on: ubuntu-latest
+     steps:
+       - uses: actions/checkout@v3
+ 
+       - name: Create dir for report
+         run: |
+           mkdir testArtifacts
+ 
+       # Config environment
+       - name: Install Node
+         uses: actions/setup-node@v3.4.1
+ 
+       - name: Install Newman
+         run: |
+           npm install -g newman
+           npm install -g newman-reporter-htmlextra
+ 
+       - name: Run Test
+         run: |
+		newman run ServeRest_API.postman_collection.json -e ServeRest.postman_environment.json -r cli,htmlextra 		
+		
+       - name: Report
+         uses: actions/upload-artifact@v4
+         with:
+           name: Reports
+           path: newman
