--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,40 +1,35 @@
 name: APIRest Run
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  newman:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Create report directory
-        run: mkdir -p testArtifacts
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install Newman and reporter
-        run: |
-          npm install -g newman
-          npm install -g newman-reporter-htmlextra
-
-      - name: Run Newman Tests
-        run: |
-          newman run ./tests/postman/ServeRest_API.postman_collection.json -r cli
-            -e ./tests/Postman/ServeRest.postman_environment.json
-            -r cli,htmlextra \
-            --reporter-htmlextra-export testArtifacts/report.html
-
-      - name: Upload HTML Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: Reports
-          path: testArtifacts
+ 
+ on:
+   push:
+     branches:
+       - main
+ 
+ jobs:
+   newman:
+     runs-on: ubuntu-latest
+     steps:
+       - uses: actions/checkout@v3
+ 
+       - name: Create dir for report
+         run: |
+           mkdir testArtifacts
+ 
+       # Config environment
+       - name: Install Node
+         uses: actions/setup-node@v3.4.1
+ 
+       - name: Install Newman
+         run: |
+           npm install -g newman
+           npm install -g newman-reporter-htmlextra
+ 
+       - name: Run Test
+         run: |
+		newman run ServeRest_API.postman_collection.json -e ServeRest.postman_environment.json -r cli,htmlextra 		
+		
+       - name: Report
+         uses: actions/upload-artifact@v4
+         with:
+           name: Reports
+           path: newman
